--- a/Imp/Imp/Imp.vcxproj.filters
+++ b/Imp/Imp/Imp.vcxproj.filters
@@ -1,45 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Imp">
+      <UniqueIdentifier>{EBF7870B-5701-887C-E07C-9E7C4C85937C}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Imp\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Imp.h" />
     <ClInclude Include="src\Imp\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Imp</Filter>
     </ClInclude>
-    <ClInclude Include="src\Imp.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Imp\Core.h">
+      <Filter>Imp</Filter>
     </ClInclude>
     <ClInclude Include="src\Imp\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Imp</Filter>
     </ClInclude>
     <ClInclude Include="src\Imp\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Imp</Filter>
     </ClInclude>
     <ClInclude Include="src\Imp\Singleton.h">
-      <Filter>Header Files</Filter>
+      <Filter>Imp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Imp\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Imp</Filter>
     </ClCompile>
     <ClCompile Include="src\Imp\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Imp</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
