[ADD] added modern openGL to the project (using Glad), created a time class for elapsed time and for printing the ms and fps

--- a/Imp/Imp.vcxproj.filters
+++ b/Imp/Imp.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClInclude Include="src\Imp\Singleton.h">
       <Filter>Imp</Filter>
     </ClInclude>
+    <ClInclude Include="src\Imp\Time.h">
+      <Filter>Imp</Filter>
+    </ClInclude>
     <ClInclude Include="src\Imp\Window.h">
       <Filter>Imp</Filter>
     </ClInclude>
